--- a/preamble.tex
+++ b/preamble.tex
@@ -56,6 +56,8 @@
 \newcommand{\I}{\mathcal{I}}
 \newcommand{\Q}{\mathcal{Q}}
 
+\newcommand{\vect}[1]{\mathbf{#1}}
+
 \newcommand{\sys}{\mathcal{S}}
 \renewcommand{\O}{\mathcal{O}}
 
