--- a/proposal.bib
+++ b/proposal.bib
@@ -202,3 +202,16 @@ Eprint = {arXiv:1711.10604},
                   Approaches},
   year =         {2015}
 }
+
+@article{hernando2013trees,
+  title =        {Trees for explaining recommendations made through
+                  collaborative filtering},
+  author =       {Hernando, Antonio and Bobadilla, Jes{\'u}S and
+                  Ortega, Fernando and Guti{\'e}Rrez, Abraham},
+  journal =      {Information Sciences},
+  volume =       {239},
+  pages =        {1--17},
+  year =         {2013},
+  publisher =    {Elsevier}
+}
+
