--- a/preamble.tex
+++ b/preamble.tex
@@ -12,6 +12,8 @@
 \usepackage{float}
 \usepackage{epsfig,color, url}
 %\usepackage{array}
+\usepackage{multicol}
+\usepackage{multirow}
 
 \linespread{1.5}
 %\IEEEoverridecommandlockouts
