--- a/proposal.bib
+++ b/proposal.bib
@@ -157,6 +157,12 @@ Year = {2017},
 Eprint = {arXiv:1711.10604},
 }
 
+@misc{data-jobs,
+    title = {Job Recommendation Challenge},
+    author = {Kaggle},
+    howpublished={\url{https://www.kaggle.com/c/job-recommendation}},
+}
+
 @book{Goodfellow-et-al-2016,
     title={Deep Learning},
     author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
@@ -211,6 +217,17 @@ Eprint = {arXiv:1711.10604},
   journal =      {Information Sciences},
   volume =       {239},
   pages =        {1--17},
+  year =         {2013},
+  publisher =    {Elsevier}
+}
+
+@article{bobadilla2013recommender,
+  title =        {Recommender systems survey},
+  author =       {Bobadilla, Jes{\'u}s and Ortega, Fernando and
+                  Hernando, Antonio and Guti{\'e}rrez, Abraham},
+  journal =      {Knowledge-based systems},
+  volume =       {46},
+  pages =        {109--132},
   year =         {2013},
   publisher =    {Elsevier}
 }
