--- a/debiasing.tex
+++ b/debiasing.tex
@@ -100,7 +100,7 @@ gradient estimation (which would be slower but in this case necessary) or using
 non-gradient-based optimization techniques.
 
 So far, our research into this problem involved using Home Mortgage Disclosure
-Act data set\cite{https://www.ffiec.gov/hmda/hmdaflat.htm}, for which we were
+Act data set\cite{data-hmda}, for which we were
 using predictive models using TensorFlow framework. This framework offer a model
 of ``end-to-end differentiable'' computation, which means that if we implement a
 computation using the tools that TensorFlow provides, the computation is
