--- a/proposal.bib
+++ b/proposal.bib
@@ -2,7 +2,6 @@
   title =        {Recommending items to more than a billion people},
   author = {Maja Kabiljo and Aleksander Ilic},
   howpublished = {\url{https://code.facebook.com/posts/861999383875667/recommending-items-to-more-than-a-billion-people/}},
-  note =         accessed # "2018-04-24",
   year = {2015},
 }
 
@@ -123,7 +122,6 @@ title = {Considerations on Recommendation Independence for a Find-Good-Items Tas
   title =        {MovieLens 20M Dataset},
   author =       {GroupLens},
   howpublished = {\url{https://grouplens.org/datasets/movielens/20m/}},
-  note =         accessed # "2017-03-24",
   year = {2017},
 }
 
@@ -137,7 +135,6 @@ title = {Considerations on Recommendation Independence for a Find-Good-Items Tas
 @misc{data-imdb,
   title =        {IMDB Alternative Interfaces},
   howpublished = {\url{http://www.imdb.com/interfaces}},
-  note =         accessed # "2016-11-17",
   year =         {2016},
   author = {IMDB},
 }
@@ -146,7 +143,6 @@ title = {Considerations on Recommendation Independence for a Find-Good-Items Tas
   title =        {DBTropes},
   author =       {Malte Kiesel},
   howpublished = {\url{http://skipforward.opendfki.de/wiki/DBTropes}},
-  note =         accessed # "2018-1-31",
   year =         {2018},
 }
 
@@ -230,5 +226,34 @@ Eprint = {arXiv:1711.10604},
   pages =        {109--132},
   year =         {2013},
   publisher =    {Elsevier}
+}
+
+@inproceedings{Datta:2017:UPD:3133956.3134097,
+ author = {Datta, Anupam and Fredrikson, Matthew and Ko, Gihyuk and Mardziel, Piotr and Sen, Shayak},
+ title = {Use Privacy in Data-Driven Systems: Theory and Experiments with Machine Learnt Programs},
+ booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+ series = {CCS '17},
+ year = {2017},
+ isbn = {978-1-4503-4946-8},
+ location = {Dallas, Texas, USA},
+ pages = {1193--1210},
+ numpages = {18},
+ url = {http://doi.acm.org/10.1145/3133956.3134097},
+ doi = {10.1145/3133956.3134097},
+ acmid = {3134097},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {causal analysis, privacy, proxy, use privacy},
+} 
+
+@inproceedings{TschantzDW12,
+  author    = {Michael Carl Tschantz and
+               Anupam Datta and
+               Jeannette M. Wing},
+  title     = {Formalizing and Enforcing Purpose Restrictions in Privacy Policies},
+  booktitle = {{IEEE} Symposium on Security and Privacy, {SP} 2012, 21-23 May 2012,
+               San Francisco, California, {USA}},
+  pages     = {176--190},
+  year      = {2012},
 }
 
