--- a/timeline.tex
+++ b/timeline.tex
@@ -1,1 +1,19 @@
 \section{Timeline}
+
+The timeline proposed for this work is summarized in table \ref{table:timeline}.
+
+\begin{table}[h]
+\caption{Proposed timetime}
+\centering
+\begin{tabular}{L{8.5cm}r}
+\hline
+Task & Expected completion date \\
+\hline
+Conditional debiasing & July 1st, 2018\\
+Isolating uninterpretability & September 15th, 2018\\
+Case studies & December 1st, 2018\\
+Thesis write-up & January 1st, 2019\\
+\hline
+\end{tabular}
+\label{table:timeline}
+\end{table}
