--- a/proposal.bib
+++ b/proposal.bib
@@ -257,3 +257,36 @@ Eprint = {arXiv:1711.10604},
   year      = {2012},
 }
 
+@inproceedings{luong11knn,
+  author =       {Luong, Binh Thanh and Ruggieri, Salvatore and
+                  Turini, Franco},
+  title =        {k-NN As an Implementation of Situation Testing for
+                  Discrimination Discovery and Prevention},
+  booktitle =    {"SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)"},
+  year =         2011,
+}
+
+@inproceedings{feldman15disparate,
+  author =       {Feldman, Michael and Friedler, Sorelle A. and
+                  Moeller, John and Scheidegger, Carlos and
+                  Venkatasubramanian, Suresh},
+  title =        {Certifying and Removing Disparate Impact},
+  booktitle =    {"SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)"},
+  year =         2015,
+}
+
+@article{dwork11fairness,
+  author =       {Cynthia Dwork and Moritz Hardt and Toniann Pitassi
+                  and Omer Reingold and Richard S. Zemel},
+  title =        {Fairness Through Awareness},
+  journal =      {"Computing Research Repository (CoRR)"},
+  year =         2011,
+}
+
+@inproceedings{zemel13fair,
+  Title =        {Learning Fair Representations},
+  Booktitle =    {"Internetional Conference on Machine Learning"},
+  Author =       {Rich Zemel and Yu Wu and Kevin Swersky and Toni
+                  Pitassi and Cynthia Dwork},
+  Year =         2013,
+}
